--- a/To-Do-List/Pages/Index.razor
+++ b/To-Do-List/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Welcome to BLAZOR To-Do List!</h1>
+<hr />
+<h5>Easily keep track of all tasks.</h5>
+<br />
+Click <strong>"To do"</strong> on side panel.
